[package]
name = "olai-uc-server"
version = "0.0.1"
description = "Unity Catalog REST and gRPC server with pluggable storage backends."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
# Deployable service, shipped as the `mangrove` Docker image (see release-plz.toml
# + docker-release.yml), NOT (yet) a crates.io library. `publish = false` makes
# that contract explicit and guards against an accidental `cargo publish`.
#
# The crate's own dependency graph is git-free (PR #89) so it *could* publish, but
# its path deps `olai-uc-common`/`-client`/`-delta-api` are still on crates.io at
# their PRE-buffa `0.0.2`; a verifying `cargo publish` builds the server against
# those stale registry copies and fails (the current source uses the buffa API).
# It can flip back to `publish = true` once those siblings are re-released to
# crates.io with the current API. (The crate is still consumed in-workspace as a
# library by tests/tools.)
publish = false

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "unitycatalog_server"

[[bin]]
# The deployable server binary: `serve` | `migrate` | `healthcheck`. Distinct
# from the `uc` client CLI (crates/cli), mirroring headwaters' `headwaters` vs
# `hw` split. Gated behind the `bin` feature so a bare `olai-uc-server` library
# build (and its library consumers) don't pull the CLI/serve/store dependency
# stack.
name = "uc-server"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.2", features = [
  "axum",
  "store",
  "metric-view",
] }
unitycatalog-delta-api = { package = "olai-uc-delta-api", path = "../delta-api", version = "0.0.2" }
# buffa runtime: generated handler glue constructs/matches buffa model types.
buffa = { workspace = true }
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.2", optional = true }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
percent-encoding = "2.1"
futures = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
olai-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { workspace = true }

axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
futures-util = { version = "0.3.28" }
http = { version = "1.2", optional = true }
olai-store = { workspace = true, features = ["encryption"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = { workspace = true, features = ["make"], optional = true }
# Trace layer for the served router + `ServeDir`/`ServeFile` for the bundled SPA
# (`bin` only). `fs` carries the static-file services; `trace` the HTTP tracing.
tower-http = { version = "0.6", features = ["trace", "fs"], optional = true }

# in-memory handler dependencies (in alphabetical order)
# `v4` for random ids (in-memory store, staging tables) and `v7` for
# time-ordered ids (volumes, agents, model versions). Both are used directly;
# declaring them here rather than relying on feature unification from a sibling
# crate keeps the build correct in isolation.
uuid = { workspace = true, optional = true, features = ["v4", "v7"] }

# `bin` (deployable `uc-server` binary) dependencies — all optional so a library
# build of this crate doesn't pull the CLI / storage-backend / serve stack.
unitycatalog-postgres = { package = "olai-uc-postgres", path = "../postgres", version = "0.0.2", optional = true }
unitycatalog-sqlite = { package = "olai-uc-sqlite", path = "../sqlite", version = "0.0.2", optional = true }
base64 = { version = "0.22", optional = true }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"], optional = true }
# `healthcheck` subcommand probes /health with a blocking client off the tokio
# runtime. Uses the workspace reqwest (rustls TLS, no system OpenSSL) plus the
# additive `blocking` feature this probe path needs.
reqwest = { workspace = true, features = ["blocking"], optional = true }
serde_yml = { workspace = true, optional = true }
swagger-ui-dist = { version = "5.18.3", optional = true }

[dev-dependencies]
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["axum", "memory", "grpc"]

axum = ["dep:axum", "dep:axum-extra", "http", "tower"]

# in-memory handler features
memory = ["uuid"]

grpc = ["tonic"]

# reusable handler patterns: proxy leaves + UC-client connector
proxy = ["dep:unitycatalog-client"]
federation = ["proxy"]

# The deployable `uc-server` binary (serve | migrate | healthcheck) and its
# config/backend/UI-serving stack. Pulls the storage backends, the hybrid proxy
# (`proxy`), swagger UI, the CLI parser, and the healthcheck client. `axum` +
# `proxy` are on so the router and upstream adapters are available.
bin = [
  "axum",
  "proxy",
  "dep:unitycatalog-postgres",
  "dep:unitycatalog-sqlite",
  "dep:base64",
  "dep:clap",
  "dep:reqwest",
  "dep:serde_yml",
  "dep:swagger-ui-dist",
  "dep:tower-http",
]

# Gates the Azurite credential-vending integration test
# (`tests/credential_vending_azurite.rs`). Requires a running Azurite blob
# emulator; run with `just integration-azurite`.
integration-azurite = ["memory"]
