[package]
name = "olai-uc-sharing-client"
version = "0.0.1"
description = "Delta Sharing protocol client and server types for Unity Catalog."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "unitycatalog_sharing_client"

[dependencies]
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.2" }

axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
olai-http = { workspace = true }
pbjson = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
default = []
server = ["axum", "axum-extra", "unitycatalog-common/axum"]
