[package]
name = "olai-uc-sqlite"
version = "0.0.1"
description = "SQLite-backed resource and secret store for the Unity Catalog server."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "unitycatalog_sqlite"

[dependencies]
# path dependencies (in alphabetical order)
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.1", default-features = false, features = [
  "store",
] }
unitycatalog-delta-api = { package = "olai-uc-delta-api", path = "../delta-api", version = "0.0.1" }

# workspace dependencies (in alphabetical order)
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value", "preserve_order"] }
thiserror = { workspace = true }
tracing = { workspace = true }

# crates.io dependencies (in alphabetical order)
base64 = "0.22"
olai-store = { workspace = true }
sqlx = { workspace = true, features = [
  "sqlite",
  "chrono",
  "uuid",
  "json",
  "runtime-tokio-rustls",
  "migrate",
  "macros",
] }
uuid = { version = "1.8", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot", "macros"] }
