[package]
edition = "2024"
name = "unitycatalog_client"
version = "0.0.0"
# NAPI extension module — distributed as an npm package, not to crates.io.
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
unitycatalog-client = { package = "olai-uc-client", path = "../../crates/client" }
unitycatalog-common = { package = "olai-uc-common", path = "../../crates/common", features = ["node"] }

env_logger = { workspace = true }
futures = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
olai-http = { workspace = true }
prost = { workspace = true }
url = { workspace = true }

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = "symbols"
